--- a/templates/SecurityLogin.html
+++ b/templates/SecurityLogin.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename = '/css/login.css')}}">
   <title>Security Login</title>
 </head>
 
