--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/login.css">
 
   <title></title>
 </head>
@@ -58,7 +58,7 @@
                 <h2>MANAGER LOGIN</h2>
                 <p>For manager only.</p>
               </div>
-              <div class="card-footer"><a href="ManagerLogin.html">Go to Manager Login</a></div>
+              <div class="card-footer"><a href="/ManagerLogin">Go to Manager Login</a></div>
             </div>
           </div>
           <div class="col-lg-6 col-12">
@@ -68,7 +68,7 @@
                 <h2>SECURITY PERSON LOGIN</h2>
                 <p>For security person only.</p>
               </div>
-              <div class="card-footer"><a href="SecurityLogin.html">Go to Security Person Login</a></div>
+              <div class="card-footer"><a href="/SecurityLogin">Go to Security Person Login</a></div>
             </div>
           </div>
         </div>
