--- a/templates/SecurityLogin.html
+++ b/templates/SecurityLogin.html
@@ -17,7 +17,7 @@
   <div class="header" id="topheader">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container text-uppercase p-2">
-        <a class="navbar-brand" href="index.html"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
+        <a class="navbar-brand" href="/index"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,11 +25,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item active">
+              <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="/contact">Contact Us<span class="sr-only">(current)</span></a>
             </li>
 
           </ul>
@@ -67,7 +67,7 @@
               </div>
             </div>
             <div class="form-row">
-              <p style="text-align: center;">Don't have account. <a href="registration.html">Register Here!</a>
+              <p style="text-align: center;">Don't have account. <a href="/registration">Register Here!</a>
                 <br></br><a href="#">Forgot password?</a>
               </p>
             </div>
