--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="../static/css/style.css">
 
   <title></title>
 </head>
@@ -20,7 +20,7 @@
     <div class="header" id="topheader">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container text-uppercase p-2">
-          <a class="navbar-brand" href="#"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
+          <a class="navbar-brand" href="/index"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,10 +29,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
               </li>
 
             </ul>
