--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-lg-12 ">
                     <h1 class="font-weight-bold py-3">Contact Us</h1>
-                    <form class="" action="/contact" method="post">
+                    <form action="/contact" method="post">
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
                                 <input type="text" placeholder="Name" name="name" value="" class="form-control" my-3
@@ -56,6 +56,12 @@
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
                                 <input type="text" placeholder="Email Address " name="email" value=""
+                                    class="form-control" my-3 p-3>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="col-lg-4 col-4">
+                                <input type="text" placeholder="Contact Number" name="phone" value=""
                                     class="form-control" my-3 p-3>
                             </div>
                         </div>
