--- a/templates/registration.html
+++ b/templates/registration.html
@@ -45,25 +45,39 @@
         </div>
         <div class="col-lg-12 ">
           <h1 class="font-weight-bold py-3">Registration Form</h1>
-          <form class="" action="index.html" method="post">
+          <form  action="/registration" method="post">
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="text" placeholder="Name" name="" value="" class="form-control" my-3 p-3>
+                <label>Select Domain</label>
+                <select name="domain">
+                  <option value="Manager">Manager</option>
+                  <option value="Security">Security</option>
+                </select>
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="text" placeholder="Username" name="" value="" class="form-control" my-3 p-3>
+                <input type="text" placeholder="Name" name="name" value="" class="form-control" my-3 p-3>
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="number" placeholder="Identity Number" name="" value="" class="form-control" my-3 p-3>
+                <input type="text" placeholder="Username" name="username" value="" class="form-control" my-3 p-3>
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <button type="button" class="btn btn-primary" name="button">Submit</button>
+                <input type="text" placeholder="Identity Number" name="idno" value="" class="form-control" my-3 p-3>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-lg-4 col-4">
+                <input type="password" placeholder="Password" name="pword" value="" class="form-control" my-3 p-3>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-lg-4 col-4">
+                <button type="submit" class="btn btn-primary" name="button">Submit</button>
               </div>
             </div>
             <div style="text-align: center;">
