--- a/templates/ManagerLogin.html
+++ b/templates/ManagerLogin.html
@@ -45,20 +45,15 @@
         </div>
         <div class="col-lg-12 ">
           <h1 class="font-weight-bold py-3">Manager Login</h1>
-          <form class="" action="index.html" method="post">
+          <form class="" action="/managerdash" method="post">
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="text" placeholder="Name" name="" value="" class="form-control" my-3 p-3>
+                <input type="text" placeholder="Username" name="username" value="" class="form-control" my-3 p-3>
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="text" placeholder="Username" name="" value="" class="form-control" my-3 p-3>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="col-lg-4 col-4">
-                <input type="password" placeholder="********" name="" value="" class="form-control">
+                <input type="password" placeholder="********" name="pword" value="" class="form-control">
               </div>
             </div>
             <div class="form-row">
