--- a/templates/registration.html
+++ b/templates/registration.html
@@ -46,15 +46,7 @@
         <div class="col-lg-12 ">
           <h1 class="font-weight-bold py-3">Registration Form</h1>
           <form  action="/registration" method="post">
-            <div class="form-row">
-              <div class="col-lg-4 col-4">
-                <label>Select Domain</label>
-                <select name="domain">
-                  <option value="Manager">Manager</option>
-                  <option value="Security">Security</option>
-                </select>
-              </div>
-            </div>
+            
             <div class="form-row">
               <div class="col-lg-4 col-4">
                 <input type="text" placeholder="Name" name="name" value="" class="form-control" my-3 p-3>
@@ -63,6 +55,15 @@
             <div class="form-row">
               <div class="col-lg-4 col-4">
                 <input type="text" placeholder="Username" name="username" value="" class="form-control" my-3 p-3>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-lg-4 col-4" style="text-align: left;">
+                <label>Select Domain</label>
+                  <select name="domain">
+                    <option value="Manager">Manager</option>
+                    <option value="Security">Security</option>
+                  </select>
               </div>
             </div>
             <div class="form-row">
