Trying to add login function

--- a/templates/managerdash.html
+++ b/templates/managerdash.html
@@ -15,8 +15,29 @@
 </head>
 
 <body>
-<p>Dash Board</p>
-  
+  <div class="header" id="topheader">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container text-uppercase p-2">
+        <a class="navbar-brand" href="/index"><i class="fa-solid fa-eye"></i> HAWK EYE</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 </body>
 
 </html>
