--- a/templates/ManagerLogin.html
+++ b/templates/ManagerLogin.html
@@ -45,7 +45,7 @@
         </div>
         <div class="col-lg-12 ">
           <h1 class="font-weight-bold py-3">Manager Login</h1>
-          <form class="" action="/managerdash" method="post">
+          <form class="" action="" method="post">
             <div class="form-row">
               <div class="col-lg-4 col-4">
                 <input type="text" placeholder="Username" name="username" value="" class="form-control" my-3 p-3>
@@ -58,7 +58,7 @@
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <button type="button" class="btn btn-primary" name="button">Login</button>
+                <button type="submit" class="btn btn-primary" name="button">Login</button>
               </div>
             </div>
             <div class="form-row">
