--- a/templates/SecurityLogin.html
+++ b/templates/SecurityLogin.html
@@ -45,8 +45,7 @@
 
         <div class="col-lg-12 ">
           <h1 class="font-weight-bold py-3">Security Person</h1>
-          <form class="" action="index.html" method="post">
-            
+          <form class="" action="" method="post">
             <div class="form-row">
               <div class="col-lg-4 col-4">
                 <input type="text" placeholder="Username" name="" value="" class="form-control" my-3 p-3>
@@ -59,7 +58,7 @@
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <button type="button" class="btn btn-primary" name="button">Login</button>
+                <button type="submit" class="btn btn-primary" name="button">Login</button>
               </div>
             </div>
             <div class="form-row">
