--- a/templates/SecurityLogin.html
+++ b/templates/SecurityLogin.html
@@ -48,12 +48,12 @@
           <form class="" action="" method="post">
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="text" placeholder="Username" name="" value="" class="form-control" my-3 p-3>
+                <input type="text" placeholder="Username" name="username" value="" class="form-control" my-3 p-3>
               </div>
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="password" placeholder="********" name="" value="" class="form-control">
+                <input type="password" placeholder="********" name="pword" value="" class="form-control">
               </div>
             </div>
             <div class="form-row">
