--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <div class="content">
+  <div class="content" id = "fademe">
     <div class="header" id="topheader">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container text-uppercase p-2">
@@ -33,6 +33,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/registration">Register <span class="sr-only">(current)</span></a>
               </li>
 
             </ul>
@@ -81,6 +84,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
     crossorigin="anonymous"></script>
+  <script>
+    window.onload = function(){
+    document.getElementById("fademe").style.opacity = 1;
+    }
+  </script>
 </body>
 
 </html>
