--- a/templates/managerdash.html
+++ b/templates/managerdash.html
@@ -30,9 +30,8 @@
               <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/">Log Out<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
             </li>
-
           </ul>
         </div>
       </div>
