--- a/templates/registration.html
+++ b/templates/registration.html
@@ -72,7 +72,12 @@
             </div>
             <div class="form-row">
               <div class="col-lg-4 col-4">
-                <input type="password" placeholder="Password" name="pword" value="" class="form-control" my-3 p-3>
+                <input type="password" placeholder="Enter Password" name="pword" value="" class="form-control" my-3 p-3>
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="col-lg-4 col-4">
+                <input type="password" placeholder="Confirm Password" name="cpword" value="" class="form-control" my-3 p-3>
               </div>
             </div>
             <div class="form-row">
