--- a/templates/ManagerLogin.html
+++ b/templates/ManagerLogin.html
@@ -9,7 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename = '../static/css/login.css')}}">
-  <title></title>
+  <title>Manager Login</title>
+  <link rel="icon" type="image/x-icon" href="../static/images/favicon.svg">
 </head>
 
 <body>
@@ -24,11 +25,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item ">
+              <a class="nav-link active" href="/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
