--- a/templates/securitydash.html
+++ b/templates/securitydash.html
@@ -10,8 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/style.css">
-
-  <title></title>
+  <title>Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="../static/images/favicon.svg">
 </head>
 
 <body>
@@ -26,11 +26,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item ">
+              <a class="nav-link active" href="/index">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
+              <a class="nav-link active" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
