--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,7 +31,8 @@
                             <a class="nav-link active" href="/index">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active" href="/contact">Contact Us<span class="sr-only">(current)</span></a>
+                            <a class="nav-link active" href="/contact">Contact Us<span
+                                    class="sr-only">(current)</span></a>
                         </li>
 
                     </ul>
@@ -47,22 +48,26 @@
                     <form action="/contact" method="post">
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
-                                <input type="text" placeholder="Name" name="name" value="" class="form-control" my-3 p-3 required/>
+                                <input type="text" placeholder="Name" name="name" value="" class="form-control" my-3 p-3
+                                    required />
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
-                                <input type="text" placeholder="Email Address " name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email" value="" class="form-control" my-3 p-3 required/>
+                                <input type="text" placeholder="Email Address " name="email" value=""
+                                    class="form-control" my-3 p-3 required />
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
-                                <input type="number" placeholder="Contact Number" pattern="[0-9]{10}" name="phone" value="" class="form-control" my-3 p-3 required/>
+                                <input type="number" placeholder="Contact Number" pattern="[0-9]{10}" name="phone"
+                                    value="" class="form-control" my-3 p-3 required />
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-4 col-4">
-                                <input type="text" placeholder="Message" name="msg" value="" class="form-control" my-3 p-3 required/>
+                                <input type="text" placeholder="Message" name="msg" value="" class="form-control" my-3
+                                    p-3 required />
                             </div>
                         </div>
                         <div class="form-row">
