--- a/templates/managerdash.html
+++ b/templates/managerdash.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/login.css">
   <title>Dashboard</title>
   <link rel="icon" type="image/x-icon" href="../static/images/favicon.svg">
 </head>
@@ -39,11 +39,25 @@
         </div>
       </div>
     </nav>
-
-
-
   </div>
-  <p></p>
+  <section>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Security Personal Name</th>
+          <th scope="col">Identity Number</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for secu in security %}
+        <tr>
+          <td>{{ secu.name }}</td>
+          <td>{{ secu.idno }}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </section>
 </body>
 
 </html>
