--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,7 @@
       document.getElementById("fademe").style.opacity = 1;
     }
   </script>
+  <script src="../ajax.js"></script>
 </body>
 
 </html>
