--- a/templates/securitydash.html
+++ b/templates/securitydash.html
@@ -9,7 +9,7 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/dash.css">
   <title>Dashboard</title>
   <link rel="icon" type="image/x-icon" href="../static/images/favicon.svg">
 </head>
@@ -31,6 +31,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/contact">Contact Us <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link active" href="/logout">Logout<span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
@@ -86,6 +89,7 @@
       </div>
 
     </section>
+    <script src="../ajax.js"></script>
 </body>
 
 </html>
