--- a/static/css/dash.css
+++ b/static/css/dash.css
@@ -21,16 +21,26 @@ body {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
-
+.card {
+  height: fit-content;
+  width: fit-content;
+  background: #fff;
+}
 .header {
   width: 100%;
   height: 10vh;
   background-size: 100% 100%;
   position: relative;
 }
-
-h1 {
+.table-title {
+  color: rgb(65, 211, 221);
   text-align: center;
+  text-emphasis: bold;
+}
+.username {
+  font-size: xx-large;
+  text-align: left;
+  color: rgb(131, 62, 62);
 }
 
 .btn {
@@ -76,7 +86,6 @@ caption {
   font-weight: bold;
   justify-content: left;
   justify-items: left;
-
 }
 .form-roww {
   text-align: left;
